--- a/Introduction to Tensor flow for AI, ML and DL/Course_1_Part_4_Lesson_4_Notebook.ipynb
+++ b/Introduction to Tensor flow for AI, ML and DL/Course_1_Part_4_Lesson_4_Notebook.ipynb
@@ -1,116 +1,144 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Course 1 - Part 4 - Lesson 4 - Notebook.ipynb",
-      "provenance": [],
-      "private_outputs": true,
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.5rc1"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "rX8mhOLljYeM"
+   },
+   "source": [
+    "##### Copyright 2019 The TensorFlow Authors."
+   ]
   },
-  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "colab": {},
+    "colab_type": "code",
+    "id": "BZSlp3DAjdYf"
+   },
+   "outputs": [],
+   "source": [
+    "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "# you may not use this file except in compliance with the License.\n",
+    "# You may obtain a copy of the License at\n",
+    "#\n",
+    "# https://www.apache.org/licenses/LICENSE-2.0\n",
+    "#\n",
+    "# Unless required by applicable law or agreed to in writing, software\n",
+    "# distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "# See the License for the specific language governing permissions and\n",
+    "# limitations under the License."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "N9-BCmi15L93"
+   },
+   "outputs": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "rX8mhOLljYeM"
-      },
-      "source": [
-        "##### Copyright 2019 The TensorFlow Authors."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+      "32768/29515 [=================================] - 0s 3us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+      "26427392/26421880 [==============================] - 46s 2us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+      "8192/5148 [===============================================] - 0s 1us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+      "4423680/4422102 [==============================] - 7s 2us/step\n",
+      "Train on 60000 samples\n",
+      "Epoch 1/10\n",
+      "59904/60000 [============================>.] - ETA: 0s - loss: 0.4720 - accuracy: 0.8323\n",
+      "Reached 60% accuracy so cancelling training!\n",
+      "60000/60000 [==============================] - 25s 417us/sample - loss: 0.4719 - accuracy: 0.8323\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x663137890>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "cellView": "form",
-        "colab_type": "code",
-        "id": "BZSlp3DAjdYf",
-        "colab": {}
-      },
-      "source": [
-        "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-        "# you may not use this file except in compliance with the License.\n",
-        "# You may obtain a copy of the License at\n",
-        "#\n",
-        "# https://www.apache.org/licenses/LICENSE-2.0\n",
-        "#\n",
-        "# Unless required by applicable law or agreed to in writing, software\n",
-        "# distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-        "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-        "# See the License for the specific language governing permissions and\n",
-        "# limitations under the License."
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "N9-BCmi15L93",
-        "colab": {}
-      },
-      "source": [
-        "import tensorflow as tf\n",
-        "\n",
-        "class myCallback(tf.keras.callbacks.Callback):\n",
-        "  def on_epoch_end(self, epoch, logs={}):\n",
-        "    if(logs.get('accuracy')>0.6):\n",
-        "      print(\"\\nReached 60% accuracy so cancelling training!\")\n",
-        "      self.model.stop_training = True\n",
-        "\n",
-        "mnist = tf.keras.datasets.fashion_mnist\n",
-        "\n",
-        "(x_train, y_train),(x_test, y_test) = mnist.load_data()\n",
-        "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
-        "\n",
-        "callbacks = myCallback()\n",
-        "\n",
-        "model = tf.keras.models.Sequential([\n",
-        "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
-        "  tf.keras.layers.Dense(512, activation=tf.nn.relu),\n",
-        "  tf.keras.layers.Dense(10, activation=tf.nn.softmax)\n",
-        "])\n",
-        "model.compile(optimizer=tf.optimizers.Adam(),\n",
-        "              loss='sparse_categorical_crossentropy',\n",
-        "              metrics=['accuracy'])\n",
-        "\n",
-        "model.fit(x_train, y_train, epochs=10, callbacks=[callbacks])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ba2ZXqDiVPEH",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-  ]
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "class myCallback(tf.keras.callbacks.Callback):\n",
+    "  def on_epoch_end(self, epoch, logs={}):\n",
+    "    if(logs.get('accuracy')>0.6):\n",
+    "      print(\"\\nReached 60% accuracy so cancelling training!\")\n",
+    "      self.model.stop_training = True\n",
+    "\n",
+    "mnist = tf.keras.datasets.fashion_mnist\n",
+    "\n",
+    "(x_train, y_train),(x_test, y_test) = mnist.load_data()\n",
+    "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
+    "\n",
+    "callbacks = myCallback()\n",
+    "\n",
+    "model = tf.keras.models.Sequential([\n",
+    "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+    "  tf.keras.layers.Dense(512, activation=tf.nn.relu),\n",
+    "  tf.keras.layers.Dense(10, activation=tf.nn.softmax)\n",
+    "])\n",
+    "model.compile(optimizer=tf.optimizers.Adam(),\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "model.fit(x_train, y_train, epochs=10, callbacks=[callbacks])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "ba2ZXqDiVPEH"
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "Course 1 - Part 4 - Lesson 4 - Notebook.ipynb",
+   "private_outputs": true,
+   "provenance": [],
+   "toc_visible": true
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
