--- a/Natural Language Processing in TensorFlow/text_generation.ipynb
+++ b/Natural Language Processing in TensorFlow/text_generation.ipynb
@@ -924,7 +924,7 @@
         "colab": {}
       },
       "source": [
-        "EPOCHS=10"
+        "EPOCHS=30"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1231,6 +1231,19 @@
         "  print ('Time taken for 1 epoch {} sec\\n'.format(time.time() - start))\n",
         "\n",
         "model.save_weights(checkpoint_prefix.format(epoch=epoch))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I3JDn684lHUa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
